add manifests for built-in buildpack, and native app
Added manifest files that use a built-in buildpack, instead of
using the buildpack via a git URL.

Also added a native app, to ensure native packages work with
N|Solid in Cloud Foundry.

--- a/sample-apps/dillinger/manifest-builtin.yml
+++ b/sample-apps/dillinger/manifest-builtin.yml
@@ -3,6 +3,6 @@ applications:
 - name:      dillinger
   memory:    128M
   command:   node dillinger-cf.js
-  buildpack: git://github.com/nodesource/nsolid-buildpack-cf
+  buildpack: nsolid_buildpack
   services:
     - nsolid-storage
