update to use 2.1.0 storage and console
* also add manifest-*.yml to .gitignore to make it easy to test alt-manifests

--- a/nsolid-storage-app/manifest.yml
+++ b/nsolid-storage-app/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
 - name:      nsolid-storage
-  buildpack: git://github.com/nodesource/nsolid-buildpack-cf
+  buildpack: nsolid_buildpack
   memory:    512M
   instances: 1
   command:   bash launch-storage.sh
