--- a/nsolid-console-app/manifest.yml
+++ b/nsolid-console-app/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
 - name:      nsolid-console
-  buildpack: git://github.com/nodesource/nsolid-buildpack-cf
+  buildpack: nsolid_buildpack
   memory:    512M
   instances: 1
   command:   bash launch-console.sh
