update to use 2.1.2 storage and console
* updated manifests to use nsolid buildpack via git instead of bundled

--- a/nsolid-console-app/manifest.yml
+++ b/nsolid-console-app/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
 - name:      nsolid-console
-  buildpack: nsolid_buildpack
+  buildpack: https://github.com/nodesource/nsolid-buildpack-cf.git
   memory:    512M
   instances: 1
   command:   bash launch-console.sh
