--- a/nsolid-storage-app/manifest.yml
+++ b/nsolid-storage-app/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
 - name:      nsolid-storage
-  buildpack: nsolid_buildpack
+  buildpack: https://github.com/nodesource/nsolid-buildpack-cf.git
   memory:    512M
   instances: 1
   command:   bash launch-storage.sh
